--- a/BePartner_App_Mid/Views/AD_Home/AD_Messege.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Messege.cshtml
@@ -27,18 +27,18 @@
                             <h3 style="color:black;">Compose Messege</h3>
                             <div class="form-outline mb-4">
                                 @*<label class="form-label" for="form3Example8">To:</label>*@
-                                @*<span class="text-danger">@Html.ValidationMessage("Receiver")</span>*@
+                                <span class="text-danger">@Html.ValidationMessage("Receiver")</span>
                                 <input type="text" name="Receiver" placeholder="To: example@gmail.com" id="form3Example8" class="form-control" />
                             </div>
 
                             <div class="form-outline mb-4">
                                 @*<label class="form-label" for="form3Example8">Subject:</label> *@
-                                @* <span class="text-danger">@Html.ValidationMessage("Subject")</span>*@
+                                <span class="text-danger">@Html.ValidationMessage("Subject")</span>
                                 <input type="text" name="Subject" placeholder="Subject:" id="form3Example8" class="form-control" />
                             </div>
 
                             <div class="form-outline mb-4">
-                                @*<span class="text-danger">@Html.ValidationMessage("WMFH")</span>*@
+                                <span class="text-danger">@Html.ValidationMessage("WMFH")</span>
                                 <textarea type="text" name="WMFH" placeholder="Write messege from here..." id="form3Example8" class="form-control" height="500px"></textarea>
                             </div>
 
