--- a/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
@@ -11,7 +11,7 @@
 <!-- new employees section start -->
 <div class="card shadow mb-4">
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
-        <h6 class="m-0 font-weight-bold text-primary">New Employees</h6>
+        <h6 class="m-0 font-weight-bold text-primary">New Employees (@ViewBag.emss)</h6>
 
         <form action="/AD_Home/Export_all_new_Employees" method="post">
 
@@ -64,7 +64,7 @@
 <!-- new Investors section start -->
 <div class="card shadow mb-4">
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
-        <h6 class="m-0 font-weight-bold text-primary">New Investors</h6>
+        <h6 class="m-0 font-weight-bold text-primary">New Investors (@ViewBag.inss)</h6>
 
         <form action="/AD_Home/Export_all_New_Investors" method="post">
 
@@ -119,7 +119,7 @@
 <!-- new Entrepreneurs section start -->
 <div class="card shadow mb-4">
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
-        <h6 class="m-0 font-weight-bold text-primary">New Enterpreneurs</h6>
+        <h6 class="m-0 font-weight-bold text-primary">New Enterpreneurs (@ViewBag.enss)</h6>
 
         <form action="/AD_Home/Export_all_New_Enterpreneurs" method="post">
 
