--- a/BePartner_App_Mid/Views/AD_Home/Index.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/Index.cshtml
@@ -27,12 +27,12 @@
                     <div class="row no-gutters sa_align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                Earnings (Monthly)
+                                Toatal Admin
                             </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.Alladmin</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                            <!--<i class="fas fa-calendar fa-2x text-gray-300"></i>-->
                         </div>
                     </div>
                 </div>
@@ -46,12 +46,12 @@
                     <div class="row no-gutters sa_align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                Earnings (Annual)
+                                Total Invaestor
                             </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.allInvaestors</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                            <!-- <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>-->
                         </div>
                     </div>
                 </div>
@@ -65,23 +65,23 @@
                     <div class="row no-gutters sa_align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                                Tasks
+                                total Entrepreneur
                             </div>
                             <div class="row no-gutters sa_align-items-center">
                                 <div class="col-auto">
-                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+                                    <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.allEntrepreneurs</div>
                                 </div>
-                                <div class="col">
-                                    <div class="progress progress-sm mr-2">
-                                        <div class="progress-bar bg-info" role="progressbar"
-                                             style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                             aria-valuemax="100"></div>
-                                    </div>
-                                </div>
+                                <!-- <div class="col">
+    <div class="progress progress-sm mr-2">
+        <div class="progress-bar bg-info" role="progressbar"
+             style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+             aria-valuemax="100"></div>
+                       </div>
+                           </div>-->
                             </div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                            <!--<i class="fas fa-clipboard-list fa-2x text-gray-300"></i>-->
                         </div>
                     </div>
                 </div>
@@ -95,12 +95,12 @@
                     <div class="row no-gutters sa_align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                Pending Requests
+                                Total Employee
                             </div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.allEmployees</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                            <!-- <i class="fas fa-comments fa-2x text-gray-300"></i>-->
                         </div>
                     </div>
                 </div>
@@ -263,23 +263,23 @@
                 </div>
             </div>
 
-            <!-- Approach -->
-            <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
-                </div>
-                <div class="card-body">
-                    <p>
-                        SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce
-                        CSS bloat and poor page performance. Custom CSS classes are used to create
-                        custom components and custom utility classes.
-                    </p>
-                    <p class="mb-0">
-                        Before working with this theme, you should become familiar with the
-                        Bootstrap framework, especially the utility classes.
-                    </p>
-                </div>
-            </div>
+            <!-- Approach
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
+        </div>
+        <div class="card-body">
+            <p>
+                SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce
+                CSS bloat and poor page performance. Custom CSS classes are used to create
+                custom components and custom utility classes.
+            </p>
+            <p class="mb-0">
+                Before working with this theme, you should become familiar with the
+                Bootstrap framework, especially the utility classes.
+            </p>
+        </div>
+    </div>-->
 
         </div>
     </div>
