--- a/BePartner_App_Mid/Content/em_style.css
+++ b/BePartner_App_Mid/Content/em_style.css
@@ -7,7 +7,7 @@
     width: 20%;
     padding: 10px;
     height: 100%;
-    background: #F2D7D9;
+    background: #b0ffd9;
     border: 0px;
     align-content: center;
     color: white;
@@ -19,7 +19,7 @@
     padding: 10px;
     border-left: 3px solid #c5c5c5;
     height: 100%;
-    background-color: #fce0e6;
+    //background-color: #fce0e6;
 }
 
 .row:after {
@@ -270,3 +270,10 @@ h2 {
     .buttonEM:hover {
         background-color: #ffffff;
     }
+
+
+.btn-block-em {
+    display: block;
+    width:500px;
+    float:left;
+}
