--- a/BePartner_App_Mid/Views/AD_Home/AD_Settings.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Settings.cshtml
@@ -28,18 +28,18 @@
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="form3Example8">Old Password:</label>
                                 <span class="text-danger">@Html.ValidationMessage("Old_Password")</span>
-                                <input type="text" name="Old_Password" value="@(Model!=null? Model.Old_Password:"")" placeholder="********" id="form3Example8" class="form-control" />
+                                <input type="password" name="Old_Password" value="@(Model!=null? Model.Old_Password:"")" placeholder="********" id="form3Example8" class="form-control" />
                             </div>
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="form3Example8">Password:</label>
                                 <span class="text-danger">@Html.ValidationMessage("Password")</span>
-                                <input type="text" name="Password" value="@(Model!=null? Model.Password:"")" placeholder="Password" id="form3Example8" class="form-control" />
+                                <input type="password" name="Password" value="@(Model!=null? Model.Password:"")" placeholder="Password" id="form3Example8" class="form-control" />
                             </div>
 
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="form3Example8">Confirm Password:</label>
                                 <span class="text-danger">@Html.ValidationMessage("ConfirmPassword")</span>
-                                <input type="text" name="ConfirmPassword" value="@(Model!=null? Model.ConfirmPassword:"")" placeholder="Confirm Password" id="form3Example8" class="form-control" />
+                                <input type="password" name="ConfirmPassword" value="@(Model!=null? Model.ConfirmPassword:"")" placeholder="Confirm Password" id="form3Example8" class="form-control" />
                             </div>
 
                             <input type="Submit" value="Change Password" class="btn btn-success ad-reg-button ">
