--- a/BePartner_App_Mid/Views/AD_Home/Account.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/Account.cshtml
@@ -75,7 +75,7 @@
                     <div class="row">
                         <div class="col-md-6 mb-4">
                             <div class="form-outline">
-                                <label class="form-label" for="form3Example1m">DOB:</label>
+                                <label class="form-label" for="form3Example1m">Date of birth:</label>
                                 <input type="datetime" name="DOB" value="@(Model!=null? Model.Dob:"")" id="form3Example1m" class="form-control" />
                             </div>
                         </div>
