--- a/BePartner_App_Mid/Views/AD_Home/_AD_Layout.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/_AD_Layout.cshtml
@@ -139,9 +139,9 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="@Url.Action("AD_Task","AD_Home")">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span>
+                    <span>Task</span>
                 </a>
             </li>
 
@@ -243,7 +243,7 @@
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
                                 <!-- Counter - Alerts -->
-                                <span class="badge badge-danger badge-counter">3+</span>
+                                <span class="badge badge-danger badge-counter">@ViewBag.enss+@ViewBag.emss+@ViewBag.inss</span>
                             </a>
                             <!-- Dropdown - Alerts -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -290,11 +290,11 @@
 
                         <!-- Nav Item - Messages -->
                         <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle"  href="@Url.Action("AD_Messege","AD_Home")" id="messagesDropdown" role="button"
+                            <a class="nav-link dropdown-toggle"  href="@Url.Action("AD_Messege_R","AD_Home")" id="messagesDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-envelope fa-fw"></i>
                                 <!-- Counter - Messages -->
-                                <span class="badge badge-danger badge-counter">7</span>
+                                <span class="badge badge-danger badge-counter">@ViewBag.Totalmsg</span>
                             </a>
                             <!-- Dropdown - Messages -->
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
