--- a/BePartner_App_Mid/Views/J_Employee/AdminInformation.cshtml
+++ b/BePartner_App_Mid/Views/J_Employee/AdminInformation.cshtml
@@ -38,9 +38,8 @@
 
     <!--rigth side-->
     <div class="column2">
-        <h2>Enterprenur Information (@ViewBag.x)</h2>
+        <h2>Admin Information (@ViewBag.x)</h2>
         <div class="card shadow mb-4">
-          
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -51,29 +50,22 @@
                                 <th>Email</th>
                                 <th>Phone</th>
                                 <th>NID</th>
-                                <th>Occupation</th>
                                 <th>Gender</th>
                                 <th>Address</th>
-                                <th>Account Status</th>
                             </tr>
                         </thead>
 
                         <tbody>
-                            @foreach (var EN in Model)
+                            @foreach (var AD in Model)
                             {
                                 <tr>
-                                    <td>@EN.FirstName</td>
-                                    <td>@EN.LastName</td>
-                                    <td>@EN.En_Email</td>
-                                    <td>@EN.Phone</td>
-                                    <td>@EN.Nid</td>
-                                    <td>@EN.Occupation</td>
-                                    <td>@EN.Gender</td>
-                                    <td>@EN.Address</td>
-                                    <td>
-                                        <a class="btn btn-warning" href="@Url.Action("EntrepreneursInvalid","J_Employee",new {id = @EN.Nid})">Deactive</a>
-
-                                    </td>
+                                    <td>@AD.FirstName</td>
+                                    <td>@AD.LastName</td>
+                                    <td>@AD.Ad_Email</td>
+                                    <td>@AD.Phone</td>
+                                    <td>@AD.Nid</td>
+                                    <td>@AD.Gender</td>
+                                    <td>@AD.Address</td>
                                 </tr>
                             }
                         </tbody>
@@ -81,5 +73,8 @@
                 </div>
             </div>
         </div>
+    </div>
 </div>
+
+
 
