--- a/BePartner_App_Mid/Views/J_Employee/Index.cshtml
+++ b/BePartner_App_Mid/Views/J_Employee/Index.cshtml
@@ -1,4 +1,10 @@
 ﻿<link href="~/Content/em_style.css" rel="stylesheet" />
+<link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
+<link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+<link href="~/Content/Site.css" rel="stylesheet" />
+
 @{
     Layout = "~/Views/Employee/EM_layout.cshtml";
 }
@@ -7,69 +13,76 @@
     <!--Left side-->
     <div class="column1">
 
+        <center>
+            <a class="btn btn-success radious" style="width:250px;margin-bottom:10px;margin-top:10px;" href="@Url.Action("Index","J_Employee")">Dashboard</a>
 
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("AccountInformation","J_Employee")">Account Information</a>
 
-        <a class="nav-link" href="@Url.Action("Index","J_Employee")">
-            <!--<i class="fas fa-fw fa-tachometer-alt"></i>-->
-            <span class="buttonAD">Dashboard</span>
-        </a>
-        <br />
-        <br />
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("AdminInformation","J_Employee")">Admin Information</a>
 
-        <a class="nav-link" href="@Url.Action("AccountInformation","J_Employee")">
-            <!--<i class="fas fa-fw fa-tachometer-alt"></i>-->
-            <span class="buttonAD">Account Information</span>
-        </a>
-        <br />
-        <br />
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("EmployeeInformation","J_Employee")"> Employee Information</a>
 
-        <a class="nav-link" href="@Url.Action("EmployeeInformation","J_Employee")">
-            <!--<i class="fas fa-fw fa-tachometer-alt"></i>-->
-            <span class="buttonAD">Employee Information</span>
-        </a>
-        <br />
-        <br />
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("InvestorInformation","J_Employee")">Investor Information</a>
 
-        <a class="nav-link" href="@Url.Action("InvestorInformation","J_Employee")">
-            <!--<i class="fas fa-fw fa-tachometer-alt"></i>-->
-            <span class="buttonAD">Investor Information</span>
-        </a>
-        <br />
-        <br />
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("EnterprenurInformation","J_Employee")">Enterprenrur Information</a>
 
-        <a class="nav-link" href="@Url.Action("EnterprenurInformation","J_Employee")">
-            <!--<i class="fas fa-fw fa-tachometer-alt"></i>-->
-            <span class="buttonAD">Enterprenrur Information</span>
-        </a>
-        <br />
-        <br />
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("TaskInformation","J_Employee")">Task Information</a>
 
-        <a class="nav-link" href="@Url.Action("TaskInformation","J_Employee")">
-            <!--<i class="fas fa-fw fa-tachometer-alt"></i>-->
-            <span class="buttonAD">Task Information</span>
-        </a>
-        <br />
-        <br />
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("Messege_received","J_Employee")">Messege</a>
 
-        <a class="nav-link" href="@Url.Action("Report","J_Employee")">
-            <!--<i class="fas fa-fw fa-tachometer-alt"></i>-->
-            <span class="buttonAD">Report</span>
-        </a>
-        <br />
+            <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("Logout","J_Employee")">Logout</a>
+
+        </center>
 
     </div>
 
     <!--rigth side-->
     <div class="column2">
-        <h2>Dashboard</h2>
-        <form action="" method="POST">
-            <input type="text" name="searchdata">
-            <input type="submit" class="search_buttons" name="search" value="Search">
-        </form>
+        <h2>Dashboard </h2>
+        <h4 style="color:royalblue">New Enterprenur Request (@ViewBag.x)</h4>
+        <div class="card shadow mb-4">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Email</th>
+                                <th>Phone</th>
+                                <th>NID</th>
+                                <th>Occupation</th>
+                                <th>Gender</th>
+                                <th>Address</th>
+                                <th>Account Status</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            @foreach (var IN in Model)
+                            {
+                                <tr>
+                                    <td>@IN.FirstName</td>
+                                    <td>@IN.LastName</td>
+                                    <td>@IN.En_Email</td>
+                                    <td>@IN.Phone</td>
+                                    <td>@IN.Nid</td>
+                                    <td>@IN.Occupation</td>
+                                    <td>@IN.Gender</td>
+                                    <td>@IN.Address</td>
+                                    <td>
+                                        <a class="btn btn-success" href="@Url.Action("EntrepreneursValid","J_Employee",new {id = @IN.Nid})">Active</a>
+
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
-
 
 
 
