--- a/BePartner_App_Mid/Views/J_Employee/Messege_add.cshtml
+++ b/BePartner_App_Mid/Views/J_Employee/Messege_add.cshtml
@@ -33,53 +33,55 @@
             <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("Logout","J_Employee")">Logout</a>
 
         </center>
-
     </div>
 
     <!--rigth side-->
     <div class="column2">
-        <h2>Enterprenur Information (@ViewBag.x)</h2>
+        <h2>Messege</h2>
         <div class="card shadow mb-4">
-          
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                            <tr>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email</th>
-                                <th>Phone</th>
-                                <th>NID</th>
-                                <th>Occupation</th>
-                                <th>Gender</th>
-                                <th>Address</th>
-                                <th>Account Status</th>
-                            </tr>
-                        </thead>
+            <div class="card-body col-md-5 mb-4">
+                <a class="btn btn-info radious" style="width: 150px; margin-bottom: 10px" href="@Url.Action("Messege_add","J_Employee")">Add messege</a>
 
-                        <tbody>
-                            @foreach (var EN in Model)
-                            {
-                                <tr>
-                                    <td>@EN.FirstName</td>
-                                    <td>@EN.LastName</td>
-                                    <td>@EN.En_Email</td>
-                                    <td>@EN.Phone</td>
-                                    <td>@EN.Nid</td>
-                                    <td>@EN.Occupation</td>
-                                    <td>@EN.Gender</td>
-                                    <td>@EN.Address</td>
-                                    <td>
-                                        <a class="btn btn-warning" href="@Url.Action("EntrepreneursInvalid","J_Employee",new {id = @EN.Nid})">Deactive</a>
+                <a class="btn btn-outline-success radious" style="width: 150px; margin-bottom: 10px" href="@Url.Action("Messege_sent","J_Employee")">Sent</a>
 
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+                <a class="btn btn-outline-primary radious" style="width: 150px; margin-bottom: 10px" href="@Url.Action("Messege_received","J_Employee")">Received</a>
+
+
+                
+                    <form action="" method="post">
+
+                        <div class="form-outline mb-4">
+                            @*<label class="form-label" for="form3Example8">To:</label>*@
+                            <span class="text-danger">@Html.ValidationMessage("Receiver")</span>
+                            <input type="text" name="Receiver" placeholder="To: example@gmail.com" id="form3Example8" class="form-control" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            @*<label class="form-label" for="form3Example8">Subject:</label> *@
+                            <span class="text-danger">@Html.ValidationMessage("Subject")</span>
+                            <input type="text" name="Subject" placeholder="Subject:" id="form3Example8" class="form-control" />
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <span class="text-danger">@Html.ValidationMessage("WMFH")</span>
+                            <textarea type="text" name="WMFH" placeholder="Write messege from here..." id="form3Example8" class="form-control"rows="6"></textarea>
+                        </div>
+
+                        <input type="Submit" value="Send" class="btn btn-success">
+
+                    </form>
+                
+
             </div>
         </div>
+    </div>
 </div>
+
+
+
+
+
+
+
+
 
