--- a/BePartner_App_Mid/Views/J_Employee/Task_Information_done.cshtml
+++ b/BePartner_App_Mid/Views/J_Employee/Task_Information_done.cshtml
@@ -33,53 +33,39 @@
             <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("Logout","J_Employee")">Logout</a>
 
         </center>
-
     </div>
 
     <!--rigth side-->
     <div class="column2">
-        <h2>Enterprenur Information (@ViewBag.x)</h2>
+        <h2>Completed Task</h2>
         <div class="card shadow mb-4">
-          
             <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                            <tr>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email</th>
-                                <th>Phone</th>
-                                <th>NID</th>
-                                <th>Occupation</th>
-                                <th>Gender</th>
-                                <th>Address</th>
-                                <th>Account Status</th>
-                            </tr>
-                        </thead>
+                <a class="btn btn-warning radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("TaskInformation","J_Employee")">Panding Task</a>
+                <a class="btn btn-success radious" style="width: 250px; margin-bottom: 10px" href="@Url.Action("Task_Information_done","J_Employee")">Completed Task</a>
 
-                        <tbody>
-                            @foreach (var EN in Model)
-                            {
-                                <tr>
-                                    <td>@EN.FirstName</td>
-                                    <td>@EN.LastName</td>
-                                    <td>@EN.En_Email</td>
-                                    <td>@EN.Phone</td>
-                                    <td>@EN.Nid</td>
-                                    <td>@EN.Occupation</td>
-                                    <td>@EN.Gender</td>
-                                    <td>@EN.Address</td>
-                                    <td>
-                                        <a class="btn btn-warning" href="@Url.Action("EntrepreneursInvalid","J_Employee",new {id = @EN.Nid})">Deactive</a>
-
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+                @foreach (var RR in Model)
+                {
+                    <div class="card border-success">
+                        <br />
+                        <h5>&emsp;Subject: @RR.Subject</h5>
+                        <h6>&emsp;Task ID: @RR.TaskId</h6>
+                        <h6>&emsp;Due_time: @RR.Due_time</h6>
+                        <label>&emsp;Task Description:</label>
+                        <p>&emsp;@RR.Task_Description</p>
+                        
+                    </div>
+                    <br />
+                }
             </div>
         </div>
+    </div>
 </div>
+
+
+
+
+
+
+
+
 
